<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VDE</string>
    <string name="act_tablist_name">VDE - Liste des articles</string>
    <string name="act_post_name">VDE - Nouvel article</string>
    <string name="act_pref_name">VDE - Préférences</string>
    <string name="menu_settings">Options</string>
    <string name="url_server_default">192.168.1.2</string>
    <string name="text_title">VDE</string>
    <string name="list_text">Lister les posts</string>
    <string name="post_text">Créer un nouveau post</string>
    <string name="post_titre">Titre</string>
    <string name="post_auteur">Auteur</string>
    <string name="post_soumettre">Soumettre</string>
    <string name="text_pref">Options</string>
    <string name="post_content">Contenu</string>
    <string name="quote">&quot;Vous avez signé pour souffrir, vous allez souffrir !&quot;</string>
    <string name="author">A.A</string>
    <color name="backgroundColor">#ffefac</color>
    <color name="button_color">#ff7f2a</color>
    <color name="button_text_color">#ffeeaa</color>
    <string name="logoDesc">Logo de l \'application</string>
    <string name="list_prev">&lt;&lt;</string>
    <string name="list_next">>></string>
    <string name="like_text">"Likes : "</string>
    <string name="list_posted">"Posté le : "</string>
    <bool name="show_dialog_default">true</bool>

</resources>
