<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewAuteur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_auteur" />

        <EditText
            android:id="@+id/editTextAuteur"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_titre" />

        <EditText
            android:id="@+id/editTextTitre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_content" />

        <EditText
            android:id="@+id/editTextPost"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.13"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.43"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/buttonSoumettre"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:background="@drawable/button"
        android:text="@string/post_soumettre" />

</LinearLayout>