<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logoDesc"
            android:gravity="center"
            android:src="@drawable/image_fond" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.29"
        android:orientation="vertical"
        android:paddingBottom="15dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="50dp"
            android:text="Dernier post :"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/tvLastPost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingTop="10dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonList"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_marginBottom="5dp"
            android:layout_weight="23.25"
            android:background="@drawable/button"
            android:text="@string/list_text" />

        <Button
            android:id="@+id/buttonPost"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button"
            android:text="@string/post_text" />

        <Button
            android:id="@+id/buttonPref"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button"
            android:text="@string/text_pref" />
    </LinearLayout>

</LinearLayout>